8211150: G1 Full GC not purging code root memory and hence causing memory leak

Reviewed-by: tschatzl, sjohanss