src/hotspot/share/gc/g1/g1CollectedHeap.cpp
@@ -1049,6 +1049,9 @@ void G1CollectedHeap::prepare_heap_for_mutators() {
   // Rebuild the strong code root lists for each region
   rebuild_strong_code_roots();
 
+  // Purge code root memory
+  purge_code_root_memory();
+
   // Start a new incremental collection set for the next pause
   start_new_collection_set();
 
